@@ -3,6 +3,7 @@
 Makefile
 Makefile.in
 aclocal.m4
+autom4te.cache
 config.cache
 config.guess
 config.h
@@ -17,6 +18,7 @@ libtool
 ltmain.sh
 missing
 mkinstalldirs
+skpoll.lo
 skserver.lo
 skstream-config
 skstream.lo
