@@ -1,3 +1,12 @@
+ 12/09/2002 Ron Steinke <rsteinke@w-link.net>,
+    - created basic_socket, a virtual base class
+      for basic_socket_stream and basic_socket_server,
+      so that the polling code has a common base
+      with getSocket() to access
+    - created basic_socket_poll polling class
+    - changed tcp_socket_stream::is_ready() to isReady()
+      to match standards for function naming, left is_ready()
+      as a wrapper of isReady() for compatibility
  2002-11-04 Al Riddoch <alriddoch@zepler.org>,
     - Add doxygen docs.
  20/28/2002 Michael Koch <konqueror@gmx.de>
